// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Connector.svelte > When rtl is true property > should render when type is "child" 1`] = `
<div>
  <span
    class="grid h-full w-4 min-w-4 grid-cols-2 grid-rows-2 line-child"
  >
    <!---->
    <i
      class="row-span-2 grid grid-rows-2 border-r"
    >
      <i
        class="border-b"
      />
    </i>
    
    <!---->
  </span>
  
</div>
`;

exports[`Connector.svelte > When rtl is true property > should render when type is "empty" 1`] = `
<div>
  <span
    class="grid h-full w-4 min-w-4 grid-cols-2 grid-rows-2 line-empty"
  >
    <!---->
  </span>
  
</div>
`;

exports[`Connector.svelte > When rtl is true property > should render when type is "last" 1`] = `
<div>
  <span
    class="grid h-full w-4 min-w-4 grid-cols-2 grid-rows-2 line-last"
  >
    <!---->
    <i
      class="border-b border-r"
    />
    
    <!---->
  </span>
  
</div>
`;

exports[`Connector.svelte > When rtl is true property > should render when type is "sibling" 1`] = `
<div>
  <span
    class="grid h-full w-4 min-w-4 grid-cols-2 grid-rows-2 line-sibling"
  >
    <i
      class="row-span-2 border-r"
    />
    <!---->
  </span>
  
</div>
`;

exports[`Connector.svelte > given a type > when type is "child" > then it should render the correct elements 1`] = `
<div>
  <span
    class="grid h-full w-4 min-w-4 grid-cols-2 grid-rows-2 line-child"
  >
    <!---->
    <i
      class="col-span-1 row-span-2 border-r"
    />
     
    <i
      class="border-b"
    />
    
    <!---->
  </span>
  
</div>
`;

exports[`Connector.svelte > given a type > when type is "empty" > then it should render the correct elements 1`] = `
<div>
  <span
    class="grid h-full w-4 min-w-4 grid-cols-2 grid-rows-2 line-empty"
  >
    <!---->
  </span>
  
</div>
`;

exports[`Connector.svelte > given a type > when type is "last" > then it should render the correct elements 1`] = `
<div>
  <span
    class="grid h-full w-4 min-w-4 grid-cols-2 grid-rows-2 line-last"
  >
    <!---->
    <i
      class="border-r"
    />
     
    <i
      class="border-b"
    />
    
    <!---->
  </span>
  
</div>
`;

exports[`Connector.svelte > given a type > when type is "sibling" > then it should render the correct elements 1`] = `
<div>
  <span
    class="grid h-full w-4 min-w-4 grid-cols-2 grid-rows-2 line-sibling"
  >
    <i
      class="row-span-2 border-r"
    />
    <!---->
  </span>
  
</div>
`;
